# jira-prediction-bot

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
experiments/: analyze_transactions.py  generate_synthetic_jira.py  visualize.py
