[project]
name = "jira-prediction-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.8.4",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "scikit-learn==1.5.1",
    "seaborn==0.13.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
